# AIST-Business-analyst-agent

./: .env.example  LICENSE  README.md  bot.py  graph.py  human_nodes.py  main.py  nodes_analyst.py  nodes_critic.py  nodes_human.py  pyproject.toml  requirements.txt  state.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: BUG_ISSUE.md  FEATURE_ISSUE.md
.github/workflows/: pep8.yml
osa_docs/: bot.md  graph.md  human_nodes.md  index.md  nodes_analyst.md  nodes_critic.md  state.md
